All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2018-07-17 niel
	Fix: \app\models\Groups::getRange() to correctly handle pagination and filtering by a groupname.
2018-07-13 Bart39
	Fix: undefined index 'groupname' for Admin grouplist active/inactive pages
	Fix: Admin grouplist inactive page returning active groups
2018-07-13 niel
	Fix: app\models\Groups::getBackfilling() to return array of groups filtered by active and
		backfill state.
	Fix: Check for valid RecordSet returning it, or an empty array otherwise
2018-07-11 Bart39
	Fix: Typo in querying database timezone
	Chg: Add categorization for a.b.sounds
	Chg: Search for all other/unknown categories (not just Misc>Other) when trying to fix names
		using Par2
	Chg: Strip '00-' from searchname (mostly music titles) when parsing Par2 for a better name
2018-07-04 niel
	Chg: Removed release counts, for the themes that used it, on group list templates.
2018-07-04 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.8.1


2018-07-04 niel
	Fix: Switch other theme templates to use the new $pagertotalitems pager count variable for
		browsegroups.php
2018-07-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.8.0


2018-07-02 niel
	Fix: Admin group list active/inactive pages broken by commit 8b5235b8.
2018-06-19 niel
**NOTE** After updating you may have to do `composer install && ./zed update nzedb` to get things
working again.
	Fix: Update ./zed command to switch directories, so that lithium considers it part of the main
		app. This is necessary as lithium v1.2 treats the commands differently if outside the 'app'
		directory, breaking our console commands because of the use of a model in
		app/config/connections.php.
	Chg: Updated base Lithium Framework 'app' files to latest v1.2 versions (again).